# slatec-rs

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALLATION.md  LICENSE-APACHE  LICENSE-MIT  README.md
crates/slatec/: AGENTS.md  Cargo.toml  README.md
crates/slatec-bundled-x86_64-unknown-linux-gnu/: AGENTS.md  Cargo.toml  README.md  build.rs
crates/slatec-bundled-x86_64-unknown-linux-gnu/metadata/: REDISTRIBUTION-NOTICE.md  THIRD-PARTY-NOTICES.md  build-recipe.json  bundle-build-receipt.json  bundle-manifest.json  source-unit-manifest.json
crates/slatec-bundled-x86_64-unknown-linux-gnu/metadata/runtime-licenses/: SOURCES-AND-RELINKING.md
crates/slatec-bundled-x86_64-unknown-linux-gnu/src/: lib.rs
crates/slatec-core/: AGENTS.md  Cargo.toml  LICENSE-MIT  README.md
crates/slatec-core/src/: fortran.rs  lib.rs
crates/slatec-src/: AGENTS.md  Cargo.toml  README.md  build.rs
crates/slatec-src/metadata/: banded-linear-systems-source-closure.json  batch-b-ode-source-closure.json  bspline-source-closure.json  bundled-provenance-evidence.json  bundled-provenance-overrides.json  bundled-source-eligibility.json  dassl-source-closure.json  family-source-closure.json  fftpack-complex-source-closure.json  fftpack-real-source-closure.json  fishpack-cartesian-2d-source-closure.json  fishpack-cylindrical-polar-source-closure.json  fishpack-pois3d-source-closure.json  fishpack-spherical-source-closure.json  lp-in-memory-source-closure.json  ode-sdrive-source-closure.json  pchip-source-closure.json  piecewise-polynomial-source-closure.json  special-scalar-expanded-source-closure.json
crates/slatec-src/native/gnu-linux-x86_64/: d1mach.f  i1mach.f  r1mach.f
crates/slatec-src/native/gnu-mingw-x86_64/: d1mach.f  i1mach.f  r1mach.f
crates/slatec-src/src/: lib.rs
crates/slatec-sys/: AGENTS.md  Cargo.toml  LICENSE-APACHE  README.md  build.rs
crates/slatec-sys/src/: banded.rs  blas.rs  bspline.rs  dassl.rs  families.rs  fftpack.rs  fftpack_complex.rs  fishpack_cartesian_2d.rs  fishpack_pois3d.rs  generated_compat.rs  least_squares.rs  legacy_error.rs  lib.rs  linear_algebra.rs  linear_least_squares.rs  linear_programming.rs  nonlinear.rs  ode.rs  pchip.rs  piecewise_polynomial.rs  quadrature.rs  roots.rs  special.rs  special_scalar_expanded.rs
crates/slatec-sys/src/batch_a/: approximation.rs  eigen.rs  fftpack.rs  interpolation.rs  linear_algebra.rs  nonlinear.rs  ode.rs  pde_fishpack.rs  quadrature.rs  special.rs  statistics.rs
crates/slatec-sys/src/batch_b/: linear_algebra.rs  ode.rs  quadrature.rs
crates/slatec-sys/tests/: airy_canonical_paths.rs  all_canonical_paths.rs  batch_a_compile_01.rs  batch_a_compile_02.rs  batch_a_compile_03.rs  batch_a_compile_04.rs  batch_a_compile_05.rs  batch_b_compile_01.rs  batch_c_compile_01.rs  batch_c_compile_02.rs  batch_d_compile.rs  blas_canonical_paths.rs  canonical_paths.rs  special_foundations_canonical_paths.rs
crates/slatec-tools/: AGENTS.md  Cargo.toml
crates/slatec-tools/src/: acquire.rs  agent_guidance.rs  airy_api.rs  all_feature_coverage.rs  approx_roots_optimization.rs  archive.rs  batch_a_api.rs  batch_b_api.rs  batch_c_api.rs  batch_d_api.rs  blas1_concurrency.rs  blas_api.rs  bundled_provider.rs  complete_corpus.rs  diagnostics.rs  eol_audit.rs  error.rs  extract.rs  ffi_declaration_ownership.rs  ffi_inventory.rs  ffi_validation.rs  final_release_audit.rs  fishpack_ode_dae_bulk.rs  fixed_form.rs  fortran_state.rs  full_corpus.rs  hash.rs  lib.rs  linkage.rs  main.rs  manifest.rs  native_link.rs  native_origin_audit.rs  native_probe.rs  ode_audit.rs  optimization_audit.rs  policy.rs  program_units.rs  prologues.rs  provider.rs  (+42 more)
crates/slatec/examples/: callback_driver_expansion.rs  fishpack_cylindrical_polar.rs  fishpack_pois3d.rs  fishpack_spherical.rs  link_airy.rs  link_bessel.rs  link_blas_level1.rs  link_blas_level1_saxpy.rs  link_blas_level2_gemv.rs  link_blas_level3.rs  link_bspline.rs  link_complete_safe_api.rs  link_dassl.rs  link_elementary.rs  link_fftpack_complex.rs  link_fftpack_real.rs  link_gamma.rs  link_least_squares_covariance.rs  link_least_squares_linear_bounded.rs  link_least_squares_linear_bounded_constrained.rs  link_least_squares_linear_constrained.rs  link_least_squares_linear_nonnegative.rs  link_least_squares_nonlinear_easy.rs  link_least_squares_nonlinear_expert.rs  link_linear_programming_in_memory.rs  link_nonlinear_analytic.rs  link_nonlinear_easy.rs  link_nonlinear_expert.rs  link_nonlinear_jacobian_check.rs  link_ode_sdrive.rs  link_pchip.rs  link_piecewise_polynomial.rs  link_quadrature_basic.rs  link_quadrature_oscillatory.rs  link_roots_scalar.rs  link_safe_all_no_call.rs  link_special_scalar.rs  link_special_scalar_expanded.rs  raw_airy.rs  raw_all_features_compile.rs  (+9 more)
crates/slatec/src/: bounded_constrained_least_squares.rs  bounded_least_squares.rs  bspline.rs  callback_runtime.rs  constrained_least_squares.rs  dassl.rs  fftpack.rs  lib.rs  linear_least_squares.rs  linear_programming.rs  ode.rs  pchip.rs  roadmap.rs  runtime.rs
crates/slatec/tests/: airy_native.rs  airy_raw_link.rs  all_feature_raw_link.rs  banded_native.rs  blas_level1_concurrency.rs  blas_level1_native.rs  blas_level23_native.rs  blas_raw_link.rs  blas_raw_native.rs  bounded_constrained_least_squares_native.rs  bounded_least_squares_native.rs  bspline_cubic_native.rs  bspline_native.rs  callback_driver_expansion.rs  constrained_least_squares_native.rs  covariance_native.rs  dassl_native.rs  fftpack_complex_native.rs  fftpack_native.rs  fishpack_cartesian_2d_native.rs  fishpack_pois3d_native.rs  least_squares_native.rs  linear_programming_native.rs  native_serialization.rs  nonlinear_expert_native.rs  nonlinear_native.rs  nonnegative_least_squares_native.rs  ode_sdrive_native.rs  pchip_native.rs  piecewise_polynomial_native.rs  polynomial_fit_native.rs  polynomial_roots_native.rs  public_module_layout.rs  quadrature_native.rs  raw_batch_a_link_01.rs  raw_batch_a_link_02.rs  raw_batch_a_link_03.rs  raw_batch_a_link_04.rs  raw_batch_a_link_05.rs  raw_batch_a_native.rs  (+14 more)
(+2905 files in other folders)
