[workspace]
resolver = "3"
members = [
    "crates/slatec-sys",
    "crates/slatec-core",
    "crates/slatec",
    "crates/slatec-tools",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-name/slatec-rs"
authors = ["Your Name"]

[workspace.dependencies]
slatec-sys = { path = "crates/slatec-sys" }
slatec-core = { path = "crates/slatec-core" }
