[workspace]
resolver = "3"
members = [
    "crates/slatec-sys",
    "crates/slatec-src",
    "crates/slatec-core",
    "crates/slatec",
    "crates/slatec-tools",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/evnekdev/slatec-rs"
authors = ["Evgenii Nekhoroshev"]

[workspace.dependencies]
slatec-sys = { version = "0.1.0", path = "crates/slatec-sys" }
slatec-src = { version = "0.1.0", path = "crates/slatec-src", default-features = false }
slatec-core = { version = "0.1.0", path = "crates/slatec-core" }
flate2 = "1.1"
num-complex = { version = "0.4.6", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
thiserror = "2"
toml = "0.8"
ureq = { version = "3", features = ["rustls"] }

# The safe facade keeps raw references in operation-sized Rust modules.  A
# high release codegen-unit count preserves those object boundaries for
# the archive linker without enabling LTO or changing numerical code.
[profile.release]
codegen-units = 256
