[package]
name = "slatec-bundled-x86_64-unknown-linux-gnu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/slatec-bundled-x86_64-unknown-linux-gnu"
links = "slatec_bundled_x86_64_unknown_linux_gnu"
build = "build.rs"
description = "Target-specific SLATEC bundled-provider carrier metadata for x86_64-unknown-linux-gnu"
readme = "README.md"
keywords = ["slatec", "fortran", "provider", "linux"]
categories = ["external-ffi-bindings", "science"]
include = ["src/**", "metadata/**", "native/**", "build.rs", "Cargo.toml", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
