[package]
name = "slatec-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared safe infrastructure for slatec-rs"
readme = "README.md"

[dependencies]
slatec-sys.workspace = true

[features]
default = ["std"]
alloc = []
std = ["alloc"]
ffi-profile-gnu-mingw-x86_64 = ["slatec-sys/ffi-profile-gnu-mingw-x86_64"]
