[package]
name = "slatec-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/slatec-core"
description = "Provider-neutral no_std types and validation contracts shared by slatec-rs"
readme = "README.md"
keywords = ["slatec", "numerics", "no-std", "scientific"]
categories = ["science", "mathematics", "no-std"]
include = ["src/**", "Cargo.toml", "README.md", "AGENTS.md", "LICENSE-*"]

[dependencies]
slatec-sys.workspace = true

[features]
default = ["std"]
alloc = []
std = ["alloc"]
ffi-profile-gnu-mingw-x86_64 = ["slatec-sys/ffi-profile-gnu-mingw-x86_64"]
