[package]
name = "slatec-src"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
links = "slatec_src"
build = "build.rs"
description = "Implementation-provider selection and native linking for slatec-rs"
readme = "README.md"
include = ["src/**", "metadata/**", "native/**", "build.rs", "Cargo.toml", "README.md", "LICENSE-*"]

[features]
default = []
prebuilt = []
source-build = []
system = []
external-backend = []
# Deprecated compatibility alias for the offline source-build backend.
bundled = ["source-build"]

blas = ["blas-level1", "blas-level2", "blas-level3"]
blas-level1 = []
blas-level2 = []
blas-level3 = []
special = ["special-elementary", "special-gamma", "special-beta", "special-error", "special-airy", "special-bessel", "special-integrals", "special-polynomials", "special-scalar-expanded", "batch-a-special"]
special-elementary = []
special-gamma = []
special-beta = []
special-error = []
special-airy = []
special-bessel = []
special-integrals = []
special-polynomials = []
special-scalar-expanded = []
batch-a-special = []
quadrature = ["quadrature-basic", "quadrature-breakpoints", "quadrature-weighted", "quadrature-oscillatory", "quadrature-fourier", "quadrature-nonadaptive", "batch-a-quadrature"]
quadrature-basic = []
quadrature-breakpoints = []
quadrature-weighted = []
quadrature-oscillatory = []
quadrature-fourier = []
quadrature-nonadaptive = []
batch-a-quadrature = []
roots = ["roots-scalar", "roots-polynomial"]
roots-scalar = []
roots-polynomial = []
nonlinear = ["nonlinear-easy", "nonlinear-expert", "nonlinear-jacobian-check", "batch-a-nonlinear"]
nonlinear-easy = []
nonlinear-expert = []
nonlinear-jacobian-check = []
batch-a-nonlinear = []
ode = ["ode-sdrive-expert", "batch-a-ode"]
ode-sdrive-expert = []
batch-a-ode = []
dassl = []
optimization = ["optimization-linear-programming-in-memory"]
optimization-linear-programming-in-memory = []
fftpack-real = []
fftpack-complex = []
batch-a-fftpack = []
fishpack-cartesian-2d = []
fishpack-pois3d = []
batch-a-fishpack = []
banded-linear-systems = []
pchip = []
bspline = []
piecewise-polynomial = []
batch-a-interpolation = []
linear-algebra = ["banded-linear-systems", "batch-a-linear-algebra"]
batch-a-linear-algebra = []
eigen = ["batch-a-eigen"]
batch-a-eigen = []
approximation = ["batch-a-approximation"]
batch-a-approximation = []
statistics = ["batch-a-statistics"]
batch-a-statistics = []
batch-a-all = ["batch-a-linear-algebra", "batch-a-eigen", "batch-a-special", "batch-a-quadrature", "batch-a-nonlinear", "batch-a-ode", "batch-a-fftpack", "batch-a-fishpack", "batch-a-interpolation", "batch-a-approximation", "batch-a-statistics"]
least-squares = ["least-squares-nonlinear", "least-squares-covariance", "least-squares-linear"]
least-squares-nonlinear = [
    "least-squares-nonlinear-easy",
    "least-squares-nonlinear-expert",
]
least-squares-nonlinear-easy = []
least-squares-nonlinear-expert = []
least-squares-covariance = []
least-squares-linear = ["least-squares-linear-nonnegative", "least-squares-linear-bounded", "least-squares-linear-constrained", "least-squares-linear-bounded-constrained"]
least-squares-linear-nonnegative = []
least-squares-linear-bounded = []
least-squares-linear-constrained = []
least-squares-linear-bounded-constrained = []

[dependencies]

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
