[package]
name = "slatec-src"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/slatec-src"
links = "slatec"
build = "build.rs"
description = "Implementation-provider selection and native linking for slatec-rs"
readme = "README.md"
keywords = ["slatec", "fortran", "numerics", "provider", "scientific"]
categories = ["external-ffi-bindings", "science", "mathematics"]
include = ["src/**", "metadata/**", "native/**", "build.rs", "Cargo.toml", "README.md", "LICENSE-*"]

[features]
default = []
prebuilt = []
source-build = []
system = []
external-backend = []

blas = ["blas-level1", "blas-level2", "blas-level3", "blas-complex"]
blas-level1 = []
blas-level2 = []
blas-level3 = []
blas-complex = []
special = ["special-elementary", "special-gamma", "special-beta", "special-error", "special-airy", "special-bessel", "special-integrals", "special-polynomials", "special-scalar-expanded", "special-real", "special-complex"]
special-elementary = []
special-gamma = []
special-beta = []
special-error = []
special-airy = []
special-bessel = []
special-integrals = []
special-polynomials = []
special-scalar-expanded = []
special-real = []
special-complex = []
quadrature = ["quadrature-basic", "quadrature-breakpoints", "quadrature-weighted", "quadrature-oscillatory", "quadrature-fourier", "quadrature-nonadaptive", "quadrature-direct"]
quadrature-basic = []
quadrature-breakpoints = []
quadrature-weighted = []
quadrature-oscillatory = []
quadrature-fourier = []
quadrature-nonadaptive = []
quadrature-direct = []
roots = ["roots-scalar", "roots-polynomial"]
roots-scalar = []
roots-polynomial = []
nonlinear = ["nonlinear-easy", "nonlinear-expert", "nonlinear-jacobian-check", "nonlinear-jacobian", "nonlinear-systems", "nonlinear-complex"]
nonlinear-easy = []
nonlinear-expert = []
nonlinear-jacobian-check = []
nonlinear-jacobian = []
nonlinear-systems = []
nonlinear-complex = []
ode = ["ode-sdrive-expert", "ode-integration", "ode-callbacks"]
ode-sdrive-expert = []
ode-integration = []
ode-callbacks = []
dassl = []
optimization = ["optimization-linear-programming-in-memory"]
optimization-linear-programming-in-memory = []
fftpack-real = []
fftpack-complex = []
fftpack-extended-real = []
fishpack-cartesian-2d = []
fishpack-pois3d = []
fishpack-general = []
fishpack-complex = []
banded-linear-systems = []
pchip = []
bspline = []
piecewise-polynomial = []
interpolation-general = []
linear-algebra = ["banded-linear-systems", "linear-algebra-real", "linear-algebra-complex"]
linear-algebra-real = []
linear-algebra-complex = []
eigen = ["linear-algebra-eigen"]
linear-algebra-eigen = []
approximation = ["approximation-core"]
approximation-core = []
statistics = ["statistics-core"]
statistics-core = []
canonical-numeric-provider = ["linear-algebra-real", "linear-algebra-eigen", "special-real", "quadrature-direct", "nonlinear-jacobian", "ode-integration", "fftpack-extended-real", "fishpack-general", "interpolation-general", "approximation-core", "statistics-core"]
complex-abi-provider = ["blas-complex", "linear-algebra-complex", "special-complex", "nonlinear-complex", "fishpack-complex"]
least-squares = ["least-squares-nonlinear", "least-squares-covariance", "least-squares-linear"]
least-squares-nonlinear = [
    "least-squares-nonlinear-easy",
    "least-squares-nonlinear-expert",
]
least-squares-nonlinear-easy = []
least-squares-nonlinear-expert = []
least-squares-covariance = []
least-squares-linear = ["least-squares-linear-nonnegative", "least-squares-linear-bounded", "least-squares-linear-constrained", "least-squares-linear-bounded-constrained"]
least-squares-linear-nonnegative = []
least-squares-linear-bounded = []
least-squares-linear-constrained = []
least-squares-linear-bounded-constrained = []

[dependencies]

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
