[package]
name = "slatec-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
links = "slatec"
build = "build.rs"
description = "Raw FFI bindings to selected SLATEC routines"
readme = "README.md"

[dependencies]

[features]
default = []
ffi-profile-gnu-mingw-x86_64 = []
raw-ffi = ["raw-ffi-all-validated"]
raw-ffi-basic = [
    "raw-ffi-numeric-scalar-subroutines",
    "raw-ffi-numeric-array-subroutines",
    "raw-ffi-scalar-functions",
]
raw-ffi-abi-sensitive = [
    "raw-ffi-complex-arguments",
    "raw-ffi-logical",
    "raw-ffi-character",
]
raw-ffi-all-validated = ["raw-ffi-basic", "raw-ffi-abi-sensitive"]
raw-ffi-numeric-scalar-subroutines = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-numeric-array-subroutines = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-scalar-functions = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-complex-arguments = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-logical = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-character = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-quadrature = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-roots = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-nonlinear = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-least-squares = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-linear-least-squares = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-ode = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-callbacks = []
raw-ffi-infrastructure = []

# Reviewed API-family gates. Scalar and BLAS declarations are emitted into
# family modules; callback families use their existing hand-reviewed modules.
# None of these gates enables the broad callback or ABI-shape batches.
raw-family-blas-level1 = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-blas-level2 = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-blas-level3 = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-elementary = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-gamma = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-beta = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-error = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-airy = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-bessel = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-integrals = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-polynomials = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-scalar-expanded = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-quadrature-basic = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-quadrature-breakpoints = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-quadrature-weighted = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-quadrature-oscillatory = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-quadrature-fourier = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-quadrature-nonadaptive = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-roots-scalar = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-nonlinear-easy = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-nonlinear-expert = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-nonlinear-jacobian-check = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-least-squares-nonlinear-easy = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-least-squares-nonlinear-expert = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-least-squares-covariance = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-least-squares-linear-nonnegative = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-least-squares-linear-bounded = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-least-squares-linear-constrained = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-least-squares-linear-bounded-constrained = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-ode-sdrive-expert = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-dassl = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-optimization-linear-programming-in-memory = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-fftpack-real = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-pchip = ["ffi-profile-gnu-mingw-x86_64"]

# Public family aliases mirror slatec and slatec-src. They remain narrow: the
# reviewed least-squares declarations do not enable the broad callback batch.
least-squares = ["least-squares-nonlinear", "least-squares-covariance", "least-squares-linear"]
least-squares-nonlinear = [
    "least-squares-nonlinear-easy",
    "least-squares-nonlinear-expert",
]
least-squares-nonlinear-easy = ["raw-family-least-squares-nonlinear-easy"]
least-squares-nonlinear-expert = ["raw-family-least-squares-nonlinear-expert"]
least-squares-covariance = ["raw-family-least-squares-covariance"]
least-squares-linear = ["least-squares-linear-nonnegative", "least-squares-linear-bounded", "least-squares-linear-constrained", "least-squares-linear-bounded-constrained"]
least-squares-linear-nonnegative = ["raw-family-least-squares-linear-nonnegative"]
least-squares-linear-bounded = ["raw-family-least-squares-linear-bounded"]
least-squares-linear-constrained = ["raw-family-least-squares-linear-constrained"]
least-squares-linear-bounded-constrained = ["raw-family-least-squares-linear-bounded-constrained"]
ode = ["ode-sdrive-expert"]
ode-sdrive-expert = ["raw-family-ode-sdrive-expert"]
dassl = ["raw-family-dassl"]
optimization = ["optimization-linear-programming-in-memory"]
optimization-linear-programming-in-memory = ["raw-family-optimization-linear-programming-in-memory"]
fftpack-real = ["raw-family-fftpack-real"]
pchip = ["raw-family-pchip"]
special-scalar-expanded = ["raw-family-special-scalar-expanded"]

[build-dependencies]
