[package]
name = "slatec-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
links = "slatec"
build = "build.rs"
description = "Raw FFI bindings to selected SLATEC routines"
readme = "README.md"

[dependencies]

[features]
default = []
ffi-profile-gnu-mingw-x86_64 = []
raw-ffi = ["raw-ffi-all-validated"]
raw-ffi-basic = [
    "raw-ffi-numeric-scalar-subroutines",
    "raw-ffi-numeric-array-subroutines",
    "raw-ffi-scalar-functions",
]
raw-ffi-abi-sensitive = [
    "raw-ffi-complex-arguments",
    "raw-ffi-logical",
    "raw-ffi-character",
]
raw-ffi-all-validated = ["raw-ffi-basic", "raw-ffi-abi-sensitive"]
raw-ffi-numeric-scalar-subroutines = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-numeric-array-subroutines = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-scalar-functions = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-complex-arguments = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-logical = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-character = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-quadrature = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-roots = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-nonlinear = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-least-squares = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-linear-least-squares = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-ode = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-callbacks = []
raw-ffi-infrastructure = []

# `all` is the declaration-only aggregate of every public mathematical family.
# It deliberately does not select a native provider; provider selection belongs
# to slatec-src or to the final application.
all = [
    "blas",
    "special",
    "quadrature",
    "roots",
    "nonlinear",
    "least-squares",
    "ode",
    "dassl",
    "optimization",
    "fftpack",
    "fishpack",
    "banded-linear-systems",
    "interpolation",
]

# Reviewed API-family gates. Scalar and BLAS declarations are emitted into
# family modules; callback families use their existing hand-reviewed modules.
# None of these gates enables the broad callback or ABI-shape batches.
raw-family-blas-level1 = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-blas-level2 = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-blas-level3 = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-elementary = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-gamma = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-beta = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-error = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-airy = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-bessel = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-integrals = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-polynomials = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-scalar-expanded = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-quadrature-basic = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-quadrature-breakpoints = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-quadrature-weighted = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-quadrature-oscillatory = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-quadrature-fourier = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-quadrature-nonadaptive = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-roots-scalar = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-nonlinear-easy = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-nonlinear-expert = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-nonlinear-jacobian-check = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-least-squares-nonlinear-easy = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-least-squares-nonlinear-expert = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-least-squares-covariance = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-least-squares-linear-nonnegative = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-least-squares-linear-bounded = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-least-squares-linear-constrained = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-least-squares-linear-bounded-constrained = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-ode-sdrive-expert = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-dassl = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-optimization-linear-programming-in-memory = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-fftpack-real = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-fftpack-complex = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-fishpack-cartesian-2d = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-fishpack-pois3d = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-banded-linear-systems = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-pchip = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-bspline = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-piecewise-polynomial = ["ffi-profile-gnu-mingw-x86_64"]

# Public family aliases mirror slatec and slatec-src. They remain narrow: the
# reviewed least-squares declarations do not enable the broad callback batch.
blas = ["blas-level1", "blas-level2", "blas-level3"]
blas-level1 = ["raw-family-blas-level1"]
blas-level2 = ["raw-family-blas-level2"]
blas-level3 = ["raw-family-blas-level3"]
special = ["special-elementary", "special-gamma", "special-beta", "special-error", "special-airy", "special-bessel", "special-integrals", "special-polynomials", "special-scalar-expanded"]
special-elementary = ["raw-family-special-elementary"]
special-gamma = ["raw-family-special-gamma"]
special-beta = ["raw-family-special-beta"]
special-error = ["raw-family-special-error"]
special-airy = ["raw-family-special-airy"]
special-bessel = ["raw-family-special-bessel"]
special-integrals = ["raw-family-special-integrals"]
special-polynomials = ["raw-family-special-polynomials"]
special-scalar-expanded = ["raw-family-special-scalar-expanded"]
quadrature = ["quadrature-basic", "quadrature-breakpoints", "quadrature-weighted", "quadrature-oscillatory", "quadrature-fourier", "quadrature-nonadaptive"]
quadrature-basic = ["raw-family-quadrature-basic"]
quadrature-breakpoints = ["raw-family-quadrature-breakpoints"]
quadrature-weighted = ["raw-family-quadrature-weighted"]
quadrature-oscillatory = ["raw-family-quadrature-oscillatory"]
quadrature-fourier = ["raw-family-quadrature-fourier"]
quadrature-nonadaptive = ["raw-family-quadrature-nonadaptive"]
roots = ["roots-scalar"]
roots-scalar = ["raw-family-roots-scalar"]
nonlinear = ["nonlinear-easy", "nonlinear-expert", "nonlinear-jacobian-check"]
nonlinear-easy = ["raw-family-nonlinear-easy"]
nonlinear-expert = ["raw-family-nonlinear-expert"]
nonlinear-jacobian-check = ["raw-family-nonlinear-jacobian-check"]
least-squares = ["least-squares-nonlinear", "least-squares-covariance", "least-squares-linear"]
least-squares-nonlinear = [
    "least-squares-nonlinear-easy",
    "least-squares-nonlinear-expert",
]
least-squares-nonlinear-easy = ["raw-family-least-squares-nonlinear-easy"]
least-squares-nonlinear-expert = ["raw-family-least-squares-nonlinear-expert"]
least-squares-covariance = ["raw-family-least-squares-covariance"]
least-squares-linear = ["least-squares-linear-nonnegative", "least-squares-linear-bounded", "least-squares-linear-constrained", "least-squares-linear-bounded-constrained"]
least-squares-linear-nonnegative = ["raw-family-least-squares-linear-nonnegative"]
least-squares-linear-bounded = ["raw-family-least-squares-linear-bounded"]
least-squares-linear-constrained = ["raw-family-least-squares-linear-constrained"]
least-squares-linear-bounded-constrained = ["raw-family-least-squares-linear-bounded-constrained"]
ode = ["ode-sdrive-expert"]
ode-sdrive-expert = ["raw-family-ode-sdrive-expert"]
dassl = ["raw-family-dassl"]
optimization = ["optimization-linear-programming-in-memory"]
optimization-linear-programming-in-memory = ["raw-family-optimization-linear-programming-in-memory"]
fftpack = ["fftpack-real", "fftpack-complex"]
fftpack-real = ["raw-family-fftpack-real"]
fftpack-complex = ["raw-family-fftpack-complex"]
fishpack = ["fishpack-cartesian-2d", "fishpack-pois3d"]
fishpack-cartesian-2d = ["raw-family-fishpack-cartesian-2d"]
fishpack-pois3d = ["raw-family-fishpack-pois3d"]
banded-linear-systems = ["raw-family-banded-linear-systems"]
interpolation = ["pchip", "bspline", "piecewise-polynomial"]
pchip = ["raw-family-pchip"]
bspline = ["raw-family-bspline"]
piecewise-polynomial = ["raw-family-piecewise-polynomial"]

[build-dependencies]
