[package]
name = "slatec-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
links = "slatec"
build = "build.rs"
description = "Raw FFI bindings to selected SLATEC routines"
readme = "README.md"

[dependencies]

[features]
default = []
ffi-profile-gnu-mingw-x86_64 = []
raw-ffi = ["raw-ffi-all-validated"]
raw-ffi-basic = [
    "raw-ffi-numeric-scalar-subroutines",
    "raw-ffi-numeric-array-subroutines",
    "raw-ffi-scalar-functions",
]
raw-ffi-abi-sensitive = [
    "raw-ffi-complex-arguments",
    "raw-ffi-logical",
    "raw-ffi-character",
]
raw-ffi-all-validated = ["raw-ffi-basic", "raw-ffi-abi-sensitive"]
raw-ffi-numeric-scalar-subroutines = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-numeric-array-subroutines = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-scalar-functions = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-complex-arguments = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-logical = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-character = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-quadrature = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-roots = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-nonlinear = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-least-squares = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-linear-least-squares = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-ode = ["ffi-profile-gnu-mingw-x86_64"]
raw-ffi-callbacks = []
raw-ffi-infrastructure = []

# `all` is the declaration-only aggregate of every public mathematical family.
# It deliberately does not select a native provider; provider selection belongs
# to slatec-src or to the final application.
all = [
    "blas",
    "special",
    "quadrature",
    "roots",
    "nonlinear",
    "least-squares",
    "ode",
    "dassl",
    "optimization",
    "fftpack",
    "fishpack",
    "banded-linear-systems",
    "interpolation",
    "linear-algebra",
    "eigen",
    "approximation",
    "statistics",
]

# Reviewed API-family gates. Scalar and BLAS declarations are emitted into
# family modules; callback families use their existing hand-reviewed modules.
# None of these gates enables the broad callback or ABI-shape batches.
raw-family-blas-level1 = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-blas-level2 = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-blas-level3 = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-elementary = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-gamma = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-beta = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-error = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-airy = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-bessel = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-integrals = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-polynomials = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-special-scalar-expanded = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-quadrature-basic = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-quadrature-breakpoints = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-quadrature-weighted = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-quadrature-oscillatory = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-quadrature-fourier = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-quadrature-nonadaptive = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-roots-scalar = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-nonlinear-easy = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-nonlinear-expert = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-nonlinear-jacobian-check = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-least-squares-nonlinear-easy = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-least-squares-nonlinear-expert = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-least-squares-covariance = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-least-squares-linear-nonnegative = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-least-squares-linear-bounded = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-least-squares-linear-constrained = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-least-squares-linear-bounded-constrained = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-ode-sdrive-expert = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-dassl = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-optimization-linear-programming-in-memory = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-fftpack-real = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-fftpack-complex = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-fishpack-cartesian-2d = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-fishpack-pois3d = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-banded-linear-systems = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-pchip = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-bspline = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-piecewise-polynomial = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-batch-a-linear-algebra = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-batch-a-eigen = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-batch-a-special = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-batch-a-quadrature = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-batch-a-nonlinear = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-batch-a-ode = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-batch-a-fftpack = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-batch-a-fishpack = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-batch-a-interpolation = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-batch-a-approximation = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-batch-a-statistics = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-batch-b-quadrature = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-batch-b-linear-algebra = ["ffi-profile-gnu-mingw-x86_64"]
raw-family-batch-b-ode = ["ffi-profile-gnu-mingw-x86_64"]

# Public family aliases mirror slatec and slatec-src. They remain narrow: the
# reviewed least-squares declarations do not enable the broad callback batch.
blas = ["blas-level1", "blas-level2", "blas-level3"]
blas-level1 = ["raw-family-blas-level1"]
blas-level2 = ["raw-family-blas-level2"]
blas-level3 = ["raw-family-blas-level3"]
special = ["special-elementary", "special-gamma", "special-beta", "special-error", "special-airy", "special-bessel", "special-integrals", "special-polynomials", "special-scalar-expanded", "batch-a-special"]
special-elementary = ["raw-family-special-elementary"]
special-gamma = ["raw-family-special-gamma"]
special-beta = ["raw-family-special-beta"]
special-error = ["raw-family-special-error"]
special-airy = ["raw-family-special-airy"]
special-bessel = ["raw-family-special-bessel"]
special-integrals = ["raw-family-special-integrals"]
special-polynomials = ["raw-family-special-polynomials"]
special-scalar-expanded = ["raw-family-special-scalar-expanded"]
batch-a-special = ["raw-family-batch-a-special"]
quadrature = ["quadrature-basic", "quadrature-breakpoints", "quadrature-weighted", "quadrature-oscillatory", "quadrature-fourier", "quadrature-nonadaptive", "batch-a-quadrature", "batch-b-quadrature"]
quadrature-basic = ["raw-family-quadrature-basic"]
quadrature-breakpoints = ["raw-family-quadrature-breakpoints"]
quadrature-weighted = ["raw-family-quadrature-weighted"]
quadrature-oscillatory = ["raw-family-quadrature-oscillatory"]
quadrature-fourier = ["raw-family-quadrature-fourier"]
quadrature-nonadaptive = ["raw-family-quadrature-nonadaptive"]
batch-a-quadrature = ["raw-family-batch-a-quadrature"]
batch-b-quadrature = ["raw-family-batch-b-quadrature"]
roots = ["roots-scalar"]
roots-scalar = ["raw-family-roots-scalar"]
nonlinear = ["nonlinear-easy", "nonlinear-expert", "nonlinear-jacobian-check", "batch-a-nonlinear"]
nonlinear-easy = ["raw-family-nonlinear-easy"]
nonlinear-expert = ["raw-family-nonlinear-expert"]
nonlinear-jacobian-check = ["raw-family-nonlinear-jacobian-check"]
batch-a-nonlinear = ["raw-family-batch-a-nonlinear"]
least-squares = ["least-squares-nonlinear", "least-squares-covariance", "least-squares-linear"]
least-squares-nonlinear = [
    "least-squares-nonlinear-easy",
    "least-squares-nonlinear-expert",
]
least-squares-nonlinear-easy = ["raw-family-least-squares-nonlinear-easy"]
least-squares-nonlinear-expert = ["raw-family-least-squares-nonlinear-expert"]
least-squares-covariance = ["raw-family-least-squares-covariance"]
least-squares-linear = ["least-squares-linear-nonnegative", "least-squares-linear-bounded", "least-squares-linear-constrained", "least-squares-linear-bounded-constrained"]
least-squares-linear-nonnegative = ["raw-family-least-squares-linear-nonnegative"]
least-squares-linear-bounded = ["raw-family-least-squares-linear-bounded"]
least-squares-linear-constrained = ["raw-family-least-squares-linear-constrained"]
least-squares-linear-bounded-constrained = ["raw-family-least-squares-linear-bounded-constrained"]
ode = ["ode-sdrive-expert", "batch-a-ode", "batch-b-ode"]
ode-sdrive-expert = ["raw-family-ode-sdrive-expert"]
batch-a-ode = ["raw-family-batch-a-ode"]
batch-b-ode = ["raw-family-batch-b-ode"]
dassl = ["raw-family-dassl"]
optimization = ["optimization-linear-programming-in-memory"]
optimization-linear-programming-in-memory = ["raw-family-optimization-linear-programming-in-memory"]
fftpack = ["fftpack-real", "fftpack-complex", "batch-a-fftpack"]
fftpack-real = ["raw-family-fftpack-real"]
fftpack-complex = ["raw-family-fftpack-complex"]
batch-a-fftpack = ["raw-family-batch-a-fftpack"]
fishpack = ["fishpack-cartesian-2d", "fishpack-pois3d", "batch-a-fishpack"]
fishpack-cartesian-2d = ["raw-family-fishpack-cartesian-2d"]
fishpack-pois3d = ["raw-family-fishpack-pois3d"]
batch-a-fishpack = ["raw-family-batch-a-fishpack"]
banded-linear-systems = ["raw-family-banded-linear-systems"]
interpolation = ["pchip", "bspline", "piecewise-polynomial", "batch-a-interpolation"]
pchip = ["raw-family-pchip"]
bspline = ["raw-family-bspline"]
piecewise-polynomial = ["raw-family-piecewise-polynomial"]
batch-a-interpolation = ["raw-family-batch-a-interpolation"]
linear-algebra = ["banded-linear-systems", "batch-a-linear-algebra", "batch-b-linear-algebra"]
batch-a-linear-algebra = ["raw-family-batch-a-linear-algebra"]
batch-b-linear-algebra = ["raw-family-batch-b-linear-algebra"]
eigen = ["batch-a-eigen"]
batch-a-eigen = ["raw-family-batch-a-eigen"]
approximation = ["batch-a-approximation"]
batch-a-approximation = ["raw-family-batch-a-approximation"]
statistics = ["batch-a-statistics"]
batch-a-statistics = ["raw-family-batch-a-statistics"]

[build-dependencies]
