[package]
name = "slatec-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Development tools for the slatec-rs workspace"

[[bin]]
name = "slatec-corpus"
path = "src/main.rs"

[dependencies]
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
toml.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile = "3"
