[package]
name = "slatec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe Rust interface to selected SLATEC numerical routines"

[features]
default = ["std"]
alloc = []
std = ["alloc", "slatec-core/std"]
integrate = ["quadrature"]
roots = [
    "std",
    "blas-level1-validation",
    "slatec-sys/raw-ffi-roots",
]
roots-native-tests = ["roots", "quadrature"]
interpolate = []
optimize = []
special = []
full = ["integrate", "roots", "interpolate", "optimize", "special"]
blas-level1-validation = [
    "slatec-core/ffi-profile-gnu-mingw-x86_64",
    "slatec-sys/ffi-profile-gnu-mingw-x86_64",
]
blas-level1 = [
    "blas-level1-validation",
    "slatec-sys/raw-ffi-basic",
]
blas-level1-native-tests = ["blas-level1"]
blas-level2 = [
    "blas-level1-validation",
    "slatec-sys/raw-ffi-character",
    "slatec-sys/raw-ffi-numeric-array-subroutines",
]
blas-level3 = ["blas-level1-validation", "slatec-sys/raw-ffi-character"]
blas-level23-native-tests = ["blas-level2", "blas-level3"]
special-functions = [
    "std",
    "blas-level1-validation",
    "slatec-sys/raw-ffi-scalar-functions",
]
special-functions-f32 = ["special-functions"]
special-functions-polynomials = ["special-functions"]
special-functions-native-tests = [
    "special-functions-f32",
    "special-functions-polynomials",
]
quadrature = [
    "std",
    "blas-level1-validation",
    "slatec-sys/raw-ffi-quadrature",
]
quadrature-native-tests = ["quadrature"]

[dependencies]
slatec-core.workspace = true
slatec-sys.workspace = true
